# HiAgent

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  README.zh-CN.md  skills-lock.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/agent/: logging.py
backend/agent/artifacts/: manager.py  storage.py
backend/agent/llm/: __init__.py  client.py  image.py
backend/agent/loop/: helpers.py  observer.py  orchestrator.py  planner.py  sub_agent_manager.py  task_runner.py
backend/agent/mcp/: bridge.py  client.py  config.py  models.py  repository.py  sse_client.py
backend/agent/memory/: store.py  (+1 more)
backend/api/: auth.py  builders.py  db_subscriber.py  dependencies.py  events.py  main.py  models.py  sse.py
backend/config/: settings.py
backend/migrations/: env.py
backend/sandbox/: Dockerfile.browser  Dockerfile.data_science  Dockerfile.default
backend/tests/: conftest.py  test_api_subscriber.py  test_artifact_manager.py  test_artifact_path.py  test_artifact_storage.py  test_base_types.py  test_boxlite_provider.py  test_code_interpret.py  test_code_search.py  test_computer_use.py  test_database.py  test_database_tools.py  test_db_subscriber.py  test_doc_gen.py  test_e2b_pool.py  test_e2b_session.py  test_extended_thinking.py  test_file_upload.py  test_handoff.py  test_helpers_screenshot.py  test_image_gen.py  test_manager_path.py  test_mcp.py  test_memory_persistent.py  test_message_bus.py  test_orchestrator_uploads.py  test_preview.py  test_repository.py  test_schemas.py  test_skills.py  test_streaming.py
(+263 files in other folders)
