[project]
name = "hiagent"
version = "0.1.0"
description = "HiAgent - AI Agent Framework"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "loguru",
    "redis",
    "httpx",
    "tavily-python",
    "boxlite",
    "pyyaml",
    "e2b-code-interpreter",
    "boto3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "config"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
